@@ -1,22 +1,18 @@
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public enum AccountType {
 
     SAVINGS, CHECKING, BUSINESS;
 
-    public List<CardType> getSuggestedCardTypes(){
-        switch(this){
-            case SAVINGS:
-                return Arrays.asList(CardType.CREDIT, CardType.DEBIT);
-            case CHECKING:
-                return Arrays.asList(CardType.DEBIT, CardType.CREDIT, CardType.PREPAID);
-            case BUSINESS:
-                return Arrays.asList(CardType.CREDIT);
-            default:
-                return Collections.emptyList();
-        }
+    /**
+     * Switch expressions are much easy to use and more readable
+     */
+    public List<CardType> getSuggestedCardTypes() {
+        return switch (this) {
+            case SAVINGS -> Arrays.asList(CardType.CREDIT, CardType.DEBIT);
+            case CHECKING -> Arrays.asList(CardType.DEBIT, CardType.CREDIT, CardType.PREPAID);
+            case BUSINESS -> List.of(CardType.CREDIT);
+        };
     }
 }
